package Service2Air;

import io.grpc.stub.StreamObserver;
import java.util.ArrayList;
import java.util.List;

public class SmartAirQualityServiceImpl extends SmartAirQualityServiceGrpc.SmartAirQualityServiceImplBase {

    private List<AirQualityData> airQualityHistory = new ArrayList<>();

    // Get current air quality parameters
    @Override
    public void getAirQuality(AirQualityRequest request, StreamObserver<AirQualityResponse> responseObserver) {
        // Retrieve current air quality data
        AirQualityData currentData = getCurrentAirQualityData();

        // Build and send response
        AirQualityResponse response = AirQualityResponse.newBuilder()
                .setParticulateMatter(currentData.getParticulateMatter())
                .setCarbonMonoxide(currentData.getCarbonMonoxide())
                .setNitrogenOxides(currentData.getNitrogenOxides())
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    // Set threshold values for air quality parameters
    @Override
    public void setAirQualityThreshold(AirQualityThresholdRequest request, StreamObserver<AirQualityThresholdResponse> responseObserver) {
        // Set threshold values for air quality parameters
        setAirQualityThresholdValues(request);

        // Build and send response
        AirQualityThresholdResponse response = AirQualityThresholdResponse.newBuilder()
                .setMessage("Air quality threshold values have been set.")
                .build();
        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }

    // Get historical data for air quality parameters
    @Override
    public void getAirQualityHistory(AirPollutionHistoryRequest request, StreamObserver<AirPollutionHistoryResponse> responseObserver) {
        // Retrieve historical data for air quality parameters within the specified time frame
        List<AirQualityData> historicalData = getHistoricalAirQualityData(request.getStartTime(), request.getEndTime());

        // Build and send response
        AirPollutionHistoryResponse.Builder responseBuilder = AirPollutionHistoryResponse.newBuilder();
        for (AirQualityData data : historicalData) {
            responseBuilder.addAirQualityData(AirQualityData.newBuilder()
                    .setTimestamp(data.getTimestamp())
                    .setParticulateMatter(data.getParticulateMatter())
                    .setCarbonMonoxide(data.getCarbonMonoxide())
                    .setNitrogenOxides(data.getNitrogenOxides())
                    .build());
        }
        responseObserver.onNext(responseBuilder.build());
        responseObserver.onCompleted();
    }

    // Helper method to retrieve current air quality data
    private AirQualityData getCurrentAirQualityData() {
        // Placeholder implementation to retrieve current air quality data
        return new AirQualityData(System.currentTimeMillis(), 20, 10, 5);
    }

    // Helper method to set threshold values for air quality parameters
    private void setAirQualityThresholdValues(AirQualityThresholdRequest request) {
        // Placeholder implementation to set threshold values for air quality parameters
    }

    // Helper method to retrieve historical data for air quality parameters
    private List<AirQualityData> getHistoricalAirQualityData(long startTime, long endTime) {
        // Placeholder implementation to retrieve historical data for air quality parameters within the specified time frame
        return airQualityHistory;
    }
}